--- a/frontend/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/frontend/src/app/layouts/admin-layout/admin-layout.component.html
@@ -23,14 +23,14 @@
 
     <li>
       <a href="#maps" routerLink="/dashboard/maps">
-        <i class='bx bx-pie-chart-alt-2'></i>
+        <i class='bx bx-map'></i>
         <span class="links_name">Maps</span>
       </a>
       <span class="tooltip">Maps</span>
     </li>
     <li>
       <a href="#events" routerLink="/dashboard/events">
-        <i class='bx bx-folder'></i>
+        <i class='bx bx-calendar-star'></i>
         <span class="links_name">Event</span>
       </a>
       <span class="tooltip">Event</span>
