--- a/frontend/src/app/views/admin/admin-users/users/users.component.css
+++ b/frontend/src/app/views/admin/admin-users/users/users.component.css
@@ -1,25 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap');
 
                                     body {
-                                       
+
                                         font-family: 'Manrope', sans-serif;
                                         background: #BA68C8;
                                         color: #fff
                                     }
-                                    
-                                    
+
+
                                     .topbar {
                                         height: 4.375rem;
                                     }
-                                    
+
                                     .topbar .nav-item .nav-link {
                                         height: 4.375rem;
                                         display: flex;
                                         align-items: center;
                                         padding: 0 .75rem;
                                     }
-                                    
-                                    
+
+
                                     .topbar .nav-item .nav-link .badge-counter {
                                         position: absolute;
                                         transform: scale(.7);
@@ -27,15 +27,15 @@
                                         right: .25rem;
                                         margin-top: -.25rem;
                                     }
-                                    
+
                                     .topbar.navbar-light .navbar-nav .nav-item .nav-link {
                                         color: #d1d3e2;
                                     }
-                                    
+
                                     .dropdown-toggle::after {
                                         content:none !important;
                                     }
-                                    
+
                                     .badge {
                                         display: inline-block;
                                         padding: .25em .4em;
@@ -48,18 +48,18 @@
                                         border-radius: .35rem;
                                         transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
                                     }
-                                    
+
                                     .form-control:focus {
-                                       
+
                                             box-shadow: none !important;
                                     }
-                                    
+
                                     .input-group-append button{
                                         box-shadow: none !important;
                                     }
-                                    
-                                    
-                                    
+
+
+
                                     .topbar .nav-item .nav-link .badge-counter {
                                         position: absolute;
                                         transform: scale(.7);
@@ -67,7 +67,7 @@
                                         right: .25rem;
                                         margin-top: -.25rem;
                                     }
-                                    
+
                                     .badge {
                                         display: inline-block;
                                         padding: .25em .4em;
@@ -80,26 +80,26 @@
                                         border-radius: .35rem;
                                         transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
                                     }
-                                    
-                                    
+
+
                                     .rounded-circle{
-                                        
+
                                             width: 40px;
                                         height: 40px;
                                     }
-                                    
-                                    
-                                    
+
+
+
                                     .topbar .topbar-divider {
                                         width: 0;
                                         border-right: 1px solid #e3e6f0;
                                         height: calc(4.375rem - 2rem);
                                         margin: auto 1rem;
                                     }
-                                    
-                                    
-                                    
-                                    
+
+
+
+
                                     .topbar .dropdown-list {
                                         width: 20rem!important;
                                     }
@@ -172,14 +172,13 @@ img{
 label {
     color: white;
   }
-  
+
   body {
     background-color: white;
   }
-  
+
   .bg-login {
     background-color: #EEEEEE;
-    background-image: url("src/assets/img/HomePage2.jpg");
     /* background by SVGBackgrounds.com */
     background-attachment: fixed;
     background-size: cover;
@@ -200,4 +199,7 @@ label {
   .bg-login .container {
     z-index: 2;
     position: relative; }
-  
+
+  .login {
+
+  }
