--- a/frontend/src/app/views/user/user/login/login.component.html
+++ b/frontend/src/app/views/user/user/login/login.component.html
@@ -1,15 +1,15 @@
 <section class="py-7 py-md-0 bg-login" id="login">
     <div class="container">
       <div class="row vh-md-100">
-  
+
         <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
           <div class="card-body p-md-5">
             <div class="row justify-content-center">
-              <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Se connecter</p>
-  
+              <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4 login">Se connecter</p>
+
               <form class="mx-1 mx-md-4" style="background-color: transparent " #f="ngForm">
-  
-  
+
+
                 <div class="d-flex flex-row align-items-center mb-4">
                   <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                   <div class="form-outline flex-fill mb-0">
@@ -17,7 +17,7 @@
                     <input type="email" id="form3Example1" class="form-control" name="Email" placeholder="Email" #Email="ngModel"  ngModel  />
                   </div>
                 </div>
-  
+
                 <div class="d-flex flex-row align-items-center mb-4">
                   <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                   <div class="form-outline flex-fill mb-0">
@@ -25,24 +25,24 @@
                     <input type="password" id="form3Example3c" class="form-control" name="Password" placeholder="Password" #Password="ngModel"  ngModel/>
                   </div>
                 </div>
-  
-  
+
+
                 <div class="form-check d-flex mb-5">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c"/>
-                  <label class="form-check-label" for="form2Example3c">
+                  <label class="form-check-label login" for="form2Example3c">
                     I agree all statements in <a href="#!">Terms of service</a>
                   </label>
                 </div>
-  
+
                 <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                  <button type="button" class="btn btn-primary btn-lg" (click)="Login(f.value)" >Login</button>
+                  <button type="button" class="btn btn-success btn-lg" (click)="Login(f.value)" >Login</button>
                 </div>
-                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4 login">
                   Vous n'avez pas un compte
-                  <a routerLink="/user/sign_up"> Register</a>
+                  <a routerLink="/user/sign_up" class="login"> Register</a>
                 </div>
-  
-  
+
+
               </form>
             </div>
           </div>
@@ -50,4 +50,3 @@
       </div>
     </div>
   </section>
-  
