--- a/frontend/src/app/views/user/user/profile/profile.component.html
+++ b/frontend/src/app/views/user/user/profile/profile.component.html
@@ -1,11 +1,11 @@
 <section class="py-7 py-md-0 bg-login" id="login">
     <div class="container">
       <div class="row vh-md-100">
-  
+
         <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
           <div class="card-body p-md-5">
             <div class="row justify-content-center">
-          
+
                 <div class="container rounded bg-white mt-5" >
                     <div class="row">
                         <div class="col-md-4 border-right">
@@ -29,13 +29,13 @@
                                 <!-- <div class="row mt-3">
                                     <!-- <div class="col-md-6"><input type="text" class="form-control" placeholder="Age" value="{{user.Age}}"></div> -->
                                     <!-- <div class="col-md-6"><input type="text" class="form-control"  placeholder="type de compte " value="{{user.type}}"></div>
-                                </div> --> 
+                                </div> -->
                                 <!-- <div class="row mt-3">
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="Etat"  value="{{user.isValidated}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="User Id" value="{{user_id}}"></div>
-                                   
+
                                 </div> -->
-                                <div class="mt-5 text-right"><button class="btn btn-primary profile-button" type="button"  (click)= "updateprofile([user._id]) ">Editer profile</button></div>
+                                <div class="mt-5 text-right"><button class="btn btn-success profile-button" (click)= "updateprofile([user._id]) ">Editer profile</button></div>
                             </div>
                         </div>
                     </div>
@@ -49,12 +49,11 @@
                                             myLink.addEventListener('click', function(e) {
                                               e.preventDefault();
                                             });</script>
-                                        
-             
+
+
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  
