--- a/frontend/src/app/views/admin/admin-events/events/dashboard-event/dashboard-event.component.html
+++ b/frontend/src/app/views/admin/admin-events/events/dashboard-event/dashboard-event.component.html
@@ -25,7 +25,7 @@
                 <h1 class="h2">Dashboard/events</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
                     <div class="btn-group me-2">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Ajouter</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary" (click)="add()">Ajouter</button>
                         <button type="button" class="btn btn-sm btn-outline-secondary">Exporter</button>
                     </div>
                     <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
