--- a/frontend/src/app/views/user/user-events/event-update/event-update.component.html
+++ b/frontend/src/app/views/user/user-events/event-update/event-update.component.html
@@ -1,122 +1,169 @@
 <body class="bg-light" data-new-gr-c-s-check-loaded="14.1068.0" data-gr-ext-installed="" cz-shortcut-listen="true">
 
-    <div class="container bg-transparent">
+    <div class="row g-3 container-fluid  justify-content-center bg-transparent">
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="../../../../../assets/img/40-add-card-outline.gif" alt="" width="72" height="72">
             <h2>Ajout d'un evenement</h2>
             <p class="lead">HuntingKigdom met à votre disposition une intefcae pour vos évenements , vos campings , vos conférences , vos sorties ... Les régles d'ajout d'évenement sont partagé et doivent etre respectées
             </p>
         </div>
+        <div class="col-md-7 col-lg-8">
+            <form action="/" class="needs-validation" #f="ngForm">
+                <div class="row g-3">
+                    <div class="col-sm-12">
+                        <label for="name" class="form-label">Nom evenement</label>
+                        <input type="text" class="form-control" id="name " name="name " [(ngModel)]="evenement.name " #q="ngModel" placeholder="" value="" required>
+                        <div class="alert alert-danger" *ngIf="q.invalid && q.touched">
+                            <div *ngIf="q.errors?.required"> Nom evenement est obligatoire</div>
+                        </div>
+                    </div>
 
-        <form action="/" class="card p-2 bg-transparent">
-            <div class="input-group">
-                <input type="text" name="category" id="category" [(ngModel)]="evenement.category">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button">Ajouter catégorie</button>
-                </div>
-            </div>
+                    <div class="col-sm-12">
+                        <label for="country" class="form-label">Catégorie</label>
+                        <select class="form-select" name="category " id="category " [(ngModel)]="evenement.category ">
+                                 <option selected  value="pêche ">pêche</option>
+                                <option value="Chasse des oiseaux ">Chasse des oiseaux</option>
+                                <option value="Chasse dans les deserts ">Chasse dans les deserts</option>
+                                <option value="Chasse dans les forets ">Chasse dans les forets</option>
+                    </select>
 
+                    </div>
 
-            <div class="col-md-8 order-md-1">
-                <div class="row">
-                    <div class="form-group col-md-6 mb-3">
-                        <label for="Name">Nom evenement</label>
-                        <input type="text" id="name" name="name" [(ngModel)]="evenement.name" class="form-control" placeholder="" value="" required>
+                    <div class="col-sm-12">
+                        <label for="type" class="form-label">Type evenement</label>
+                        <input type="text" class="form-control" id="type " name="type " [(ngModel)]="evenement.type " #qt="ngModel" placeholder="" value="" required>
+                        <div class="alert alert-danger" *ngIf="qt.invalid && qt.touched">
+                            <div *ngIf="q.errors?.required"> Merci d'indiquer le type de l'evenement </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12">
+                        <label for="description" class="form-label">Description evenement</label>
+                        <input type="text" class="form-control" id="description " name="description " [(ngModel)]="evenement.description " placeholder="" value="" required="">
                         <div class="invalid-feedback">
-                            Nom evenement est obligatoir.
+                            description obligatoire
                         </div>
                     </div>
-                    <div class="form-group col-md-6 mb-3">
-                        <label for="type">Type</label>
-                        <input type="text" class="form-control" name="type" id="type" [(ngModel)]="evenement.type" placeholder="" value="" required="">
+
+                    <div class="col-sm-12">
+                        <label for="detail" class="form-label">Details</label>
+                        <textArea class="form-select" name="detail " id="detail " [(ngModel)]="evenement.detail " required="">
+              </textArea>
                         <div class="invalid-feedback">
-                            Type evenement est obligatoir.
+                            Please select a valid detail.
                         </div>
                     </div>
-                </div>
 
-                <div class="form-group mb-3">
-                    <label for="description">description</label>
-                    <div class="input-group">
-                        <input type="text" class="form-control" name="description" id="description" [(ngModel)]="evenement.description" placeholder="" required="">
-                        <div class="invalid-feedback" style="width: 100%;">
-                            Description evenement est obligatoire.
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group mb-3">
-                    <label for="email">Détials <span class="text-muted">(Optional)</span></label>
-                    <textarea class="form-control" name="detail" id="detail" [(ngModel)]="evenement.detail"></textarea>
-                </div>
-
-                <div class="form-group mb-3">
-                    <label for="address">Addresse</label>
-                    <input type="text" class="form-control" name="location" id="location" [(ngModel)]="evenement.location" placeholder="1234 Main St" required="">
-                    <div class="invalid-feedback">
-                        Please enter your address.
-                    </div>
-                </div>
-
-
-                <div class="row">
-
-                    <div class="form-group col-md-4 mb-3">
-                        <label for="state">Pays</label>
-                        <select class="custom-select d-block w-100" name="pays" id="pays" [(ngModel)]="evenement.pays" required="">
-                        <option value="">Choose...</option>
-                        <option>California</option>
-                      </select>
+                    <div class="col-sm-12">
+                        <label for="maxmumbers" class="form-label">Nombre maximum des participant</label>
+                        <input type="number" class="form-control" id="maxmumbers " name="maxmumbers " [(ngModel)]="evenement.maxmumbers " placeholder="" value="" required="">
                         <div class="invalid-feedback">
-                            Please provide a valid state.
+                            maxmumbers obligatoire
                         </div>
                     </div>
-                    <div class="form-group  col-md-3 mb-3">
-                        <label for="zip">Zip</label>
-                        <input type="text" class="form-control" name="codePostal" id="codePostal" [(ngModel)]="evenement.codePostal" placeholder="" required="">
-                        <div class="invalid-feedback">
-                            Zip code required.
-                        </div>
-                    </div>
-                </div>
-                <hr class="mb-4">
 
+                    <hr class="my-4">
+                    <h4 class="mb-3">Coordonnées</h4>
+
+                    <div class="col-sm-6">
+                        <label for="startDate" class="form-label">Date début evenement</label>
+                        <input type="date" class="form-control" id="startDate " name="startDate " [(ngModel)]="evenement.startDate " placeholder="" value="" required="">
+                        <div class="invalid-feedback">
+                            startDate obligatoire
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <label for="endDate" class="form-label">Date fin evenement</label>
+                        <input type="date" class="form-control" id="endDate " name="endDate " [(ngModel)]="evenement.endDate " placeholder="" value="" required="">
+                        <div class="invalid-feedback">
+                            endDate obligatoire
+                        </div>
+                    </div>
+                    <div class="col-sm-12">
+                        <label for="location" class="form-label">Location evenement</label>
+                        <input type="text" class="form-control" id="location " name="location " [(ngModel)]="evenement.location " placeholder="" value="" required="">
+                        <div class="invalid-feedback">
+                            location obligatoire
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12">
+                        <label for="pays" class="form-label">Pays evenement</label>
+                        <input type="text" class="form-control" id="pays " name="pays " [(ngModel)]="evenement.pays " placeholder="" value="" required="">
+                        <div class="invalid-feedback">
+                            pays obligatoire
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12">
+                        <label for="codePostal" class="form-label">Code Postal evenement</label>
+                        <input type="number" class="form-control" id="codePostal " name="codePostal " [(ngModel)]="evenement.codePostal " placeholder="" value="" required="">
+                        <div class="invalid-feedback">
+                            codePostal obligatoire
+                        </div>
+                    </div>
+
+                    <hr class="my-4">
+                    <h4 class="mb-3">Contacts</h4>
+
+                    <div class="col-sm-12">
+                        <label for="phoneContact" class="form-label">Numéro de Contact evenement</label>
+                        <input type="number" class="form-control" id="phoneContact " name="phoneContact " [(ngModel)]="evenement.phoneContact " placeholder="" value="" required="">
+                        <div class="invalid-feedback">
+                            phoneContact obligatoire
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12">
+                        <label for="mailContact" class="form-label">Mail de contact evenement</label>
+                        <input type="mail" class="form-control" id="mailContact " name="mailContact " [(ngModel)]="evenement.mailContact " placeholder="" value="" required="">
+                        <div class="invalid-feedback">
+                            mailContact obligatoire
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
+                </div>
+                <!-- ***************** -->
+
+                <hr class="my-4">
                 <h4 class="mb-3">Paiement</h4>
 
-                <div class="d-block my-3">
-                    <div class="custom-control custom-radio">
-                        <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" required="">
-                        <label class="custom-control-label" for="credit">paiement par carte</label>
+                <div class="my-3">
+                    <div class="form-check">
+                        <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked="" required="">
+                        <label class="form-check-label" for="credit">Participation gratuite</label>
                     </div>
-                    <div class="custom-control custom-radio">
-                        <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                        <label class="custom-control-label" for="debit">Paiement chèque</label>
+                    <div class="form-check">
+                        <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required="">
+                        <label class="form-check-label" for="debit">Participation payée</label>
                     </div>
-                    <div class="custom-control custom-radio">
-                        <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                        <label class="custom-control-label" for="paypal">Paiement sur placeholder</label>
-                    </div>
-                    <div class="custom-control custom-radio">
-                        <input id="noPayment" name="paymentMethod" type="radio" class="custom-control-input" required="" id="paiement">
-                        <label class="custom-control-label" for="paypal">Gratuit</label>
-                    </div>
-                </div>
-                <div class="row">
-
-                    <div class="form-group col-md-6 mb-3">
-                        <label for="cc-number">numro carte Credit  </label>
-                        <input type="number" class="form-control" placeholder="" required="" id="creditCard" name="creditCard" [(ngModel)]="evenement.creditCard">
+                    <br>
+                    <div class="col-sm-12">
+                        <label for="creditCard" class="form-label">Numéro carte bancaire</label>
+                        <input type="number" class="form-control" id="creditCard " name="creditCard " [(ngModel)]="evenement.creditCard " placeholder="" value="" required="">
                         <div class="invalid-feedback">
-                            Credit card number is required
+                            creditCard obligatoire
                         </div>
                     </div>
                 </div>
-                <hr class="mb-4">
+
+                <button class=" col-sm-12 btn btn-primary btn-lg btn-block" (click)="update()">Mettre à jour</button>
+
+                <hr class="my-4">
+
+            </form>
+        </div>
 
 
-                <button class="btn btn-primary btn-lg btn-block" (click)="update()">Mettre à jour</button>
-            </div>
-        </form>
+
 
         <footer class="my-5 pt-5 text-muted text-center text-small">
             <p class="mb-1">© Hunting Kingdom</p>
