--- a/frontend/src/app/views/user/user-products/payment/payment.component.html
+++ b/frontend/src/app/views/user/user-products/payment/payment.component.html
@@ -128,7 +128,7 @@ module.exports = {
             </div>
         </div>
         <div>
-            <button routerLink="/products" class="block w-full max-w-xs mx-auto bg-indigo-500 hover:bg-indigo-700 focus:bg-indigo-700 text-white rounded-lg px-3 py-3 font-semibold"><i class="mdi mdi-lock-outline mr-1" routerLink="/products"></i> ORDER  NOW</button>
+            <button (click)="delete()" class="block w-full max-w-xs mx-auto bg-indigo-500 hover:bg-indigo-700 focus:bg-indigo-700 text-white rounded-lg px-3 py-3 font-semibold"><i class="mdi mdi-lock-outline mr-1"></i> ORDER  NOW</button>
         </div>
     </div>
 </div>
