--- a/frontend/src/app/views/user/user-products/products/products.component.html
+++ b/frontend/src/app/views/user/user-products/products/products.component.html
@@ -58,7 +58,7 @@
           <div class="container mx-auto max-w w-full ">
             <div class="card flex flex-col justify-center p-10 bg-white  rounded-lg shadow-2xl">
               <div class="prod-title">
-                <p class="text-2xl uppercase text-gray-900 font-bold">{{product.Nom}}</p>
+                <p class="text-xl uppercase text-gray-900 font-bold">{{product.Nom}}</p>
                 <p class="uppercase text-sm text-gray-400">
                   great quality
                 </p>
