--- a/frontend/src/app/views/user/user-products/products/birds/birds.component.html
+++ b/frontend/src/app/views/user/user-products/products/birds/birds.component.html
@@ -71,7 +71,7 @@
                  <p class="font-bold text-xl">{{HikingProduct.prix}} $</p>
                  <button
                    class=" px-6 py-2 transition ease-in duration-200 uppercase rounded-full hover:bg-emerald-300 hover:text-white border-2 hover:border-emerald-300 border-gray-900 focus:outline-none"
-                   routerLink="/cart">Add
+                   routerLink="/cart"(click)="addtocart(HikingProduct._id,1,HikingProduct.Nom,HikingProduct.prix)">Add
                    to cart
                  </button>
 
