--- a/frontend/src/app/views/user/user-products/products/forest/forest.component.html
+++ b/frontend/src/app/views/user/user-products/products/forest/forest.component.html
@@ -73,7 +73,7 @@
                  <p class="font-bold text-xl">{{HuntingProduct.prix}} $</p>
                  <button
                    class=" px-6 py-2 transition ease-in duration-200 uppercase rounded-full hover:bg-emerald-300 hover:text-white border-2 hover:border-emerald-300 border-gray-900 focus:outline-none"
-                   routerLink="/cart">Add
+                   routerLink="/cart"(click)="addtocart(HuntingProduct._id,1,HuntingProduct.Nom,HuntingProduct.prix)">Add
                    to cart
                  </button>
 
