--- a/frontend/src/app/views/user/user-events/event-details/event-details.component.css
+++ b/frontend/src/app/views/user/user-events/event-details/event-details.component.css
@@ -12,3 +12,15 @@
     width: 100%;
     padding: 0;
 }
+
+.primarHKBtn {
+    radius: 0;
+    background-color: transparent;
+    border-color: #11BFAE;
+    color: #11BFAE;
+}
+
+.primarHKBtn:hover {
+    background-color: #11BFAE;
+    color: #0B2518;
+}
