--- a/frontend/src/app/views/user/user-events/event-details/event-details.component.html
+++ b/frontend/src/app/views/user/user-events/event-details/event-details.component.html
@@ -8,6 +8,12 @@
         <br>
         <h1 class="display-4 fw-normal">{{evenement.name}}</h1>
         <p class="lead fw-normal">{{evenement.description}}</p>
+        <p class="lead fw-normal">{{evenement.detail}}</p>
+
+        <p class="lead fw-normal">{{evenement.mailContact}}</p>
+        <p class="lead fw-normal">{{evenement.phoneContact}}</p>
+        <p class="lead fw-normal">du : {{evenement.startDate | date}} à {{evenement.endDate | date}} </p>
+
         <div class="navbar navbar-expand navbar-dark  justify-content-center  m-5">
             <div class="nav justify-content-center">
                 <div class="container px-4 px-lg-5">
@@ -29,8 +35,7 @@
             </div>
 
         </div>
-        <button class="btn btn-primary btn-lg btn-block" (click)="updateCurrentEvent(evenement._id)">Modifier Evenement</button>
-        <app-event-comments></app-event-comments>
+        <button class="  btn btn-primary btn-lg btn-block primarHKBtn" (click)="updateCurrentEvent(evenement._id)">Modifier Evenement</button>
     </div>
 
     <!--<form action="/" class="card p-2 bg-transparent">
