--- a/frontend/src/app/views/admin/admin-maps/camp/camp.component.html
+++ b/frontend/src/app/views/admin/admin-maps/camp/camp.component.html
@@ -6,6 +6,7 @@
           <div class="d-flex flex-wrap search-box ">
             <input class="form-control"  type="text"placeholder="Type to Search..."  [(ngModel)]="searchKeyWord">
             <button class="btn btn-success" (click)="serachListElement()">Search</button>
+            <button class="btn btn-primary navigate" (click)="navigateToHunt()">Check Hunt Spots</button>
           </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col" *ngFor="let spot of campList">
