--- a/frontend/src/app/views/admin/admin-store/store/store.component.html
+++ b/frontend/src/app/views/admin/admin-store/store/store.component.html
@@ -47,7 +47,7 @@
               </td>
 
               <td>
-                <img src="{{ product.img }}" width="100px">
+                <img src="http://localhost:3000/events/getImage/{{product.img}}" width="100px">
               </td>
               <td>
                 <button class="btn btn-success btn-block" routerLink="/products/add">Modifier</button>
