--- a/frontend/src/app/views/user/user-products/products/forest/forest.component.html
+++ b/frontend/src/app/views/user/user-products/products/forest/forest.component.html
@@ -64,7 +64,7 @@
                </p>
              </div>
              <div class="prod-img">
-               <img src="https://unsplash.com/photos/IJjfPInzmdk/download?force=true&w=1920"
+               <img src="http://localhost:3000/events/getImage/{{HuntingProduct.img}}"
                     class="w-full object-cover object-center"/>
              </div>
              <div class="prod-info">
